<resources>
    <string name="app_name">praktikaGidatua_Zerrenda</string>
    <string name="arcane">Arcane pertsonaiak</string>
    <string name="gehitu">Gehitu</string>
    <string name="gehitu_pertsonaia">Gehitu pertsonaia</string>
    <string name="itzuli">Itzuli</string>
    <string name="estado">Bizirik dago?</string>
    <string name="aldatu">Elementua aldatu</string>
    <string name="gorde">Gorde</string>
    <string name="izena">Izena</string>
    <string name="deskribapena">Deskribapena</string>
    <string name="ezabatu">Ezabatu</string>
    <string name="iragazi">Iragazi</string>
    <string name="garbitu">Garbitu</string>
    <string name="izena_bilatu">Izena bilatu</string>
    <string name="generoa">Zer generoa da?</string>
    <string name="masculino">Gizonezkoa</string>
    <string name="femenino">Emakumezkoa</string>
    <string name="jesus">Jesus</string>

    <string-array name="egoera">
        <item>Bai</item>
        <item>Ez</item>
    </string-array>
</resources>